# git-tests

./: README.md  pyproject.toml  readmi.md
data/: names.txt  russian_names.txt
src/: main.py  main2.py  utils.py
